fixed beatmap creation info text overflow

--- a/html/css/beatmap.css
+++ b/html/css/beatmap.css
@@ -63,12 +63,14 @@
 .bm_creation_info {
   border-radius: 13px;
   background-color: #901F42;
-  width: 260px;
+  min-width: 260px;
   height: 70px;
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin-left: 10px;
   margin-top: 10px;
   display: flex;
+  width: fit-content;
+  padding-right: 5px;
 }
 
 .bm_creation_info_avatar {
